data/all_generated_tests/raw_wast_tests/nop_TypeMismatchinControlFlowInstructions_712.wast
;; 3. **Test 3: Invalid Block Type Signature Preceded by `nop`**    - Introduce a `nop` before a block that contains an invalid type signature statement which should lead to a validation error.    - **Constraint**: `nop` should not mask or alter type signature validation of the block.    - **Type Mismatch Check**: Confirms block type signature validation remains accurate.

(assert_invalid
  (module
    (func (nop) (block (result i32) (nop) (unreachable)))
  )
  "type mismatch"
)